--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1222,7 +1222,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #ffff4b;
+    background: #bd17d7;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
@@ -1653,6 +1653,9 @@ pre code {
   margin: 8px -10px -20px;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
+}
+.back-to-top span {
+  margin-right: 8px;
 }
 .back-to-top .fa {
   text-align: center;
