--- a/themes/next/source/css/_common/components/back-to-top.styl
+++ b/themes/next/source/css/_common/components/back-to-top.styl
@@ -3,11 +3,11 @@ if (hexo-config('back2top.enable')) {
     font-size: $b2t-font-size;
 
     span {
-     // margin-right: 8px;
+    margin-right: 8px;
       if (not hexo-config('back2top.scrollpercent')) {
         display: none;
-     padding-right: 5px; // 新添加的代码
-     left: 30px; // // 新添加的代码
+     //  padding-right: 5px; // 新添加的代码
+      // left: 30px; // // 新添加的代码
       }
     }
 
