--- a/themes/anzhiyu/layout/includes/rightside.pug
+++ b/themes/anzhiyu/layout/includes/rightside.pug
@@ -42,7 +42,7 @@ mixin rightsideItem(array)
   #rightside-config-hide
     if hideArray
       +rightsideItem(hideArray)
-  #rightside-config-show
+  #rightside-config-show 
     if enable
       if hide
         button#rightside-config(type="button" title=_p("rightside.setting"))
@@ -61,3 +61,6 @@ mixin rightsideItem(array)
 
     button#go-up(type="button" title=_p("rightside.back_to_top"))
       i.anzhiyufont.anzhiyu-icon-arrow-up
+
+    button#go-down(type="button" title="直达底部" onclick="anzhiyu.scrollToDest(document.body.scrollHeight, 500)")
+      i.anzhiyufont.anzhiyu-icon-arrow-down
