更新文章和新增文档网站

--- a/themes/anzhiyu/layout/includes/footer.pug
+++ b/themes/anzhiyu/layout/includes/footer.pug
@@ -91,3 +91,12 @@ if theme.footer.footerBar && theme.footer.footerBar.enable
             i.anzhiyufont.anzhiyu-icon-creative-commons-by-line
             i.anzhiyufont.anzhiyu-icon-creative-commons-nc-line
             i.anzhiyufont.anzhiyu-icon-creative-commons-nd-line
+div#footer-animal
+        .animal-wall
+        img.animal.entered.loaded(
+            src="	https://p.qjqq.cn/cover/202410191400045.png/color"
+            onerror="this.onerror=null;this.src='/img/404.jpg';"
+            data-lazy-src="https://p.qjqq.cn/cover/202410191400045.png"
+            alt="动物"
+            data-ll-status="loaded"
+        )
